rust/mysql/mysql-test/target/debug/build/num-traits-ecf8332320b08457/stderr
error[E0658]: 128-bit integers are not stable (see issue #35118)
 --> <anon>:1:13
  |
1 | fn main() { 0i128; }
  |             ^^^^^
  |
  = help: add #![feature(i128_type)] to the crate attributes to enable

error: aborting due to previous error

